# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.sh
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: prayertimes.py
app/core/: config.py
app/schemas/: prayertimes.py
app/static/: islamiska-forbundet_locations.json  vaktijaba_locations.json  vaktijaeu_locations.json
app/templates/: index.html
app/utils/: utils.py
